<resources>
    <string name="app_name">Test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="keyword_text">Keyword</string>
    <string name="keyword">Enter Keyword</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="ShippingOptions">Shipping Options</string>
    <string name="Unspecified">Unspecified</string>
    <string name="ReqError">Please enter mandatory field</string>
    <string name="New">New</string>
    <string name="Used">Used</string>
    <string name="EnableNearbySearch">Enable Nearby Search</string>
    <string name="LocalPickup">Local Pickup</string>
    <string name="FreeShipping">Free Shipping</string>
    <string name="Search">Search</string>
    <string name="Clear">Clear</string>
    <string name="Miles">Miles from</string>
    <string name="from">From</string>
    <string name="current">Current Location</string>
    <string name="zipcode">zipcode</string>
    <string-array name="spinnerItems">
        <item >All</item>
        <item >Art</item>
        <item >Baby</item>
        <item >Books</item>
        <item >Clothing, Shoes &amp; Accessories</item>
        <item >Computers, Tablets &amp; Networking</item>
        <item >Health &amp; Beauty</item>
        <item >Music</item>
        <item >Video Games &amp; Consoles</item>
    </string-array>
    <string-array name="SortBy">
        <item >Default</item>
        <item >Name</item>
        <item >Price</item>
        <item >Days</item>
    </string-array>
    <string-array name="Order">
        <item >Ascending</item>
        <item >Descending</item>
    </string-array>

</resources>
