<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/keyword_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/keyword"
        android:inputType="text"
        android:scrollbars="none"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/keywordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/ReqError"
        android:textColor="#A63C3C"
        android:textStyle="bold"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keywordError" />

    <Spinner
        android:id="@+id/Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:entries="@array/spinnerItems" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/condition"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <CheckBox
        android:id="@+id/new_w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="5dp"
        android:text="@string/New"
        android:textColorHighlight="#BB85FC"
        android:textColorLink="#BB85FC"/>

    <CheckBox
        android:id="@+id/used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/Used"
        android:textColorHighlight="#BB85FC"
        android:textColorLink="#BB85FC"/>

    <CheckBox
        android:id="@+id/unspecified"
        android:layout_width="123dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/Unspecified"
        android:textColorHighlight="#BB85FC"
        android:textColorLink="#BB85FC" />



</LinearLayout>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/ShippingOptions"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <CheckBox
        android:id="@+id/local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="5dp"
        android:text="@string/LocalPickup"
        android:textColorLink="#BB85FC" />

    <CheckBox
        android:id="@+id/free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/FreeShipping"
        android:textColorLink="#BB85FC"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/EnableNearbySearch"/>



    <CheckBox
        android:id="@+id/nearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:textColorLink="#BB85FC"/>
    </LinearLayout>

    <EditText
        android:id="@+id/miles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:scrollbars="none"
        android:hint="@string/Miles"
        tools:ignore="Autofill" />

    <!--android:visibility="gone"-->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:text="@string/from" />

    <RadioButton
        android:id="@+id/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="3dp"
        android:checked="true"
        android:visibility="gone"
        android:textColorLink="#BB85FC"
        android:text="@string/current"/>




    <!--<AutoCompleteTextView-->
        <!--android:id="@+id/enteredZipcode"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="top"-->
        <!--android:hint="@string/zipcode"-->
        <!--android:enabled="false"-->
        <!--android:inputType="text"-->
        <!--android:dropDownHeight="wrap_content"-->
        <!--/>-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
        <RadioButton
            android:id="@+id/enterZipcode"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="3dp"
            android:visibility="gone"
            android:textColorLink="#BB85FC"/>
    <!--<AutoCompleteTextView-->
    <!--android:id="@+id/enteredZipcode"-->
    <!--android:layout_width="220dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:visibility="gone"-->
    <!--android:hint="zipcode" />-->

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/enteredZipcode"
            android:layout_width="220dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:dropDownVerticalOffset="-100dp"
            android:dropDownHeight="wrap_content"
            android:inputType="text"
            android:enabled="false"
            android:maxLines="1"
            android:hint="zipcode"/>


    </LinearLayout>






    <!--<android.support.v7.widget.AppCompatAutoCompleteTextView-->
        <!--android:id="@+id/enteredZipcode"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_margin="10dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:inputType="text"-->
        <!--android:maxLines="1"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent" />-->

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="220dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--&gt;-->

        <!--<AutoCompleteTextView-->
            <!--android:id="@+id/enteredZipcode"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="Enter programming language" />-->
    <!--</LinearLayout>-->

<!--<EditText-->
        <!--android:id="@+id/enteredZipcode"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="top"-->
        <!--android:visibility="gone"-->
        <!--android:hint="@string/zipcode"-->
        <!--android:enabled="false"-->
        <!--android:inputType="text"-->
        <!--app:layout_constraintStart_toEndOf="@+id/enterZipcode"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/current"-->
        <!--tools:ignore="Autofill" />-->

    <TextView
        android:id="@+id/zipError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/ReqError"
        android:textColor="#A63C3C"
        android:visibility="gone"
        android:textStyle="bold"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    android:gravity="center_horizontal">
    <Button
        android:id="@+id/search"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:background="#FC5830"
        android:text="@string/Search"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/clear"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:background="#FC5830"
        android:text="@string/Clear"
        android:textColor="@android:color/white" />
</LinearLayout>

</LinearLayout>